[package]
name = "SRW"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.5.14"
borsh = "0.8.1"
spl-token = "3.1.0"

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.5.14"
solana-sdk = "1.5.14"
solana-validator = "1.5.14"
tokio = { version = "0.3", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]
